trying to fix display issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ a:focus {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+	min-height: 100vh;
 	padding: 3em;
 	text-align: center;
 	color: #ECEFF4;
